--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -16,7 +16,7 @@
         <div class="content__container content__container--border">
             <section class="l-row l-row--items-2">
                 <div class="l-row__item">
-                    <h2>Current Membership Summary</h2>
+                    <h2 class="content__headline">Current Membership Summary</h2>
                 </div>
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
                     @fragments.tier.summary(currentSubscription)
@@ -26,7 +26,7 @@
         <div class="content__container content__container--border">
             <section class="l-row l-row--items-2">
                 <div class="l-row__item">
-                    <h2>New Membership Summary</h2>
+                    <h2 class="content__headline">New Membership Summary</h2>
                 </div>
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
                     <table class="table table--responsive-font table--striped" role="grid">
