--- a/frontend/app/views/main.scala.html
+++ b/frontend/app/views/main.scala.html
@@ -24,6 +24,8 @@
         <meta http-equiv="imagetoolbar"             content="no"/>
         <meta name="Rating"                         content="general"/>
         <meta name="Distribution"                   content="Global"/>
+
+        @* TODO remove this when/if the a-b homepage is added or removed *@
     @if(noIndex == true){
         <meta name="robots" content="noindex">
     }
