place time and blurb on one line

--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -14,8 +14,7 @@
                 <span class="progress-indicator__count">6</span>
             </div>
             <div class="slide-show-detail__secondary">
-                <h2 class="slide-show-detail__description">@description</h2>
-                <time class="slide-show-detail__time">@Dates.prettyDateAndDayName(time)</time>
+                <h2 class="slide-show-detail__description">@description <time>@Dates.prettyDateAndDayName(time)</time></h2>
             </div>
         </figcaption>
     </figure>
