--- a/frontend/app/views/fragments/tier/benefits.scala.html
+++ b/frontend/app/views/fragments/tier/benefits.scala.html
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <div class="package__outer hidden-mobile-portrait js-select-tier">
+        <div class="package__outer hidden-mobile-portrait">
             <div class="package__inner">
                 @if(showChooseDetails) {
                     @fragments.tier.chooseDetails(tier)
