--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -12,7 +12,7 @@
 
         <div class="l-row">
             @fragments.joiner.joinStepCounter(1, 3)
-            <section class="two-thirds">
+            <section class="two-thirds js-benefit-container">
                 <div class="package-list">
                     @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=true, mode="promo", showChooseDetails=true)
                     @fragments.tier.benefits(currentTier=None, tier=Tier.Partner, showBenefitDetails=true, mode="promo", showChooseDetails=true)
