Change masterclass copy

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -3,7 +3,7 @@
 @main("Masterclasses", containerPadding=false, htmlClass="events-bg theme--masterclass", pageInfo=pageInfo) {
     <section class="header-bar">
         <h1 class="header-bar__title">
-            Long and short courses taught by award-winning professionals with discounts for Guardian Members
+            Courses and workshops taught by award-winning professionals, with discounts for Partners and Patrons
         </h1>
         <i class="event-logo icon-sprite-masterclasses"></i>
         <input type="text"
