--- a/frontend/app/views/home.scala.html
+++ b/frontend/app/views/home.scala.html
@@ -49,7 +49,7 @@
         <ul class="home-promo-list u-unstyled">
             @promoElement("whats_included_", "Discover what's included with Guardian Membership", "/about", "png")
             @promoElement("events_", "Browse our events catalogue and book your tickets now", "/events")
-            @promoElement("compare_tiers_", "Compare the three tiers of Guardian Membership", "/join", "png")
+            @promoElement("compare_tiers_", "Compare the three tiers of Guardian Membership", "/join")
             @promoElement("become_patron_", "Join as a Patron today and support the Guardian's mission of promoting the open exchange of ideas", "/patrons")
         </ul>
     </section>
