--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -29,7 +29,7 @@
             <span class="event-block__header__count">@eventPortfolio.normal.length</span>
         </div>
         <div class="event-block__events">
-            <ul class="events-list u-unstyled" id="js-filter-container">
+            <ul class="events-list u-unstyled@if(eventPortfolio.normal.length == 0){ events-list--empty}" id="js-filter-container">
                 @for(event <- eventPortfolio.normal) {
                     @fragments.event.item(event, false)
                 }
