Move filtering below subnav

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -8,13 +8,6 @@
             Courses and workshops taught by award-winning professionals, with discounts for Partners and Patrons
         </h1>
         <i class="event-logo icon-sprite-masterclasses"></i>
-        <input type="text"
-               class="events-list__filter"
-               id="js-filter"
-               data-filter-field="title"
-               placeholder="Filter Masterclasses..."
-               autocomplete="off"
-        />
     </section>
     <nav role="navigation" class="nav nav--global nav--global--masterclasses">
         <div class="navigation__scroll">
@@ -28,6 +21,15 @@
             </ul>
         </div>
     </nav>
+    <div class="event-block">
+        <div class="events-title-container">
+            <h4 class="event-block-title case--lower">Filter</h4>
+        </div>
+        <div class="events-list-container">
+            <input type="text" class="events-list__filter" id="js-filter" data-filter-field="title"
+                   placeholder="Filter Masterclasses..." autocomplete="off" />
+        </div>
+    </div>
 
     @views.html.event.list(eventPortfolio, pageInfo, title)
 }
