Some work on event page styling

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -23,11 +23,11 @@
     </nav>
     <div class="event-block">
         <div class="events-title-container">
-            <h4 class="event-block-title case--lower">Filter</h4>
+            <h4 class="event-block-title case--lower"></h4>
         </div>
         <div class="events-list-container">
             <input type="text" class="events-list__filter" id="js-filter" data-filter-field="title"
-                   placeholder="Filter Masterclasses..." autocomplete="off" />
+                placeholder="Browse by title" autocomplete="off" />
         </div>
     </div>
 
