--- a/frontend/assets/stylesheets/home/_home.scss
+++ b/frontend/assets/stylesheets/home/_home.scss
@@ -4,7 +4,7 @@
     background-color: $white;
 
     @include mq(tablet) {
-        padding: rem(20px) rem(20px) 0;
+        padding: rem(20px) rem(30px) 0 rem(20px);
         width: 51%;
         float: right;
         position: relative;
