Show selected filter in place of whats on

--- a/frontend/app/views/event/guardianLive.scala.html
+++ b/frontend/app/views/event/guardianLive.scala.html
@@ -8,5 +8,5 @@
         <i class="event-logo icon-sprite-guardian-live"></i>
     </section>
 
-    @views.html.event.list(eventPortfolio, pageInfo)
+    @views.html.event.list(eventPortfolio, pageInfo, "What's on")
 }
