Add course count

--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -26,6 +26,7 @@
     <div class="event-block">
         <div class="event-block__header">
             <h4 class="event-block__header__title case--lower">@title</h4>
+            <span class="event-block__header__count">@eventPortfolio.normal.length</span>
         </div>
         <div class="event-block__events">
             <ul class="events-list u-unstyled" id="js-filter-container">
