--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -8,6 +8,7 @@
     position: relative;
     background-color: $white;
     padding: rem($gs-gutter / 2);
+    overflow: hidden;
 
     @include mq(tablet) {
         padding: rem($gs-gutter);
@@ -27,11 +28,12 @@
 }
 
 .event-block__header {
-    padding: 0 0 rem($gs-baseline);
+    padding-bottom: rem($gs-baseline);
     @include mq(mem-full) {
         float: left;
         width: rem(gs-span(2));
         margin-right: $gs-gutter;
+        padding-bottom: 0;
     }
 }
 
