Align filter with courses

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -22,10 +22,7 @@
         </div>
     </nav>
     <div class="event-block">
-        <div class="events-title-container">
-            <h4 class="event-block-title case--lower"></h4>
-        </div>
-        <div class="events-list-container">
+        <div class="event-block__events event-block__events--no-header">
             <input type="text" class="events-list__filter" id="js-filter" data-filter-field="title"
                 placeholder="Browse by title" autocomplete="off" />
         </div>
