No matching courses rather than events

--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -75,7 +75,7 @@
 
 // only visible when no filter results are found
 .events-list--empty:before {
-    content: 'No matching events';
+    content: 'No matching courses';
     display: block;
 }
 
