--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -23,8 +23,12 @@
     </nav>
     <div class="event-block">
         <div class="event-block__events event-block__events--no-header">
-            <input type="text" class="events-list__filter" id="js-filter" data-filter-field="title"
-                placeholder="Browse by title" autocomplete="off" />
+            <input type="text"
+                   class="events-list__filter"
+                   id="js-filter"
+                   data-filter-field="title"
+                   placeholder="Browse by title"
+                   autocomplete="off" />
         </div>
     </div>
 
