--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -23,12 +23,15 @@
     </nav>
     <div class="event-block">
         <div class="event-block__events event-block__events--no-header">
-            <input type="text"
-                   class="events-list__filter"
-                   id="js-filter"
-                   data-filter-field="title"
-                   placeholder="Browse by title"
-                   autocomplete="off" />
+            <label class="events-list__filter">
+                <input type="text"
+                       class="events-list__filter__text"
+                       id="js-filter"
+                       data-filter-field="title"
+                       placeholder="Browse by title"
+                       autocomplete="off" />
+                <i class="events-list__filter__icon icon-sprite icon-sprite-search"></i>
+            </label>
         </div>
     </div>
 
