--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -28,7 +28,7 @@
                        class="events-list__filter__text"
                        id="js-filter"
                        data-filter-field="title"
-                       placeholder="Browse by title"
+                       placeholder="Filter by title"
                        autocomplete="off" />
                 <i class="events-list__filter__icon icon-sprite icon-sprite-search"></i>
             </label>
