new copy for the about and home page

--- a/frontend/app/views/index.scala.html
+++ b/frontend/app/views/index.scala.html
@@ -11,15 +11,12 @@
     <div class="home-slice home-slice--epic home-slice--epic-home-page tier-hidden u-cf">
         <div class="home-slice__inner u-cf">
             <div class="home-slice__headline-block">
-                <h1 class="home-slice__headline">We believe that the open exchange of information,
-                    ideas and opinions<br /><span class="headline-highlight">has the power to change the world for the better</span></h1>
+                <h1 class="home-slice__headline">We believe real, face-to-face discussion<br /><span class="headline-highlight">has a unique power to broaden minds.</span></h1>
             </div>
             <div class="home-slice__copy-block">
                 <p class="home-slice__copy">Guardian Membership is the community for those who share this belief.</p>
                 <a class="action home-slice__action action--secondary-button" href="/about">Learn more</a>
-                <p class="home-slice__copy">Guardian Membership brings you closer to the stories of the day,
-                    connects you to the conversations that matter and introduces you to fellow members who share
-                    your interests.</p>
+                <p class="home-slice__copy">Guardian Membership transforms everything you enjoy from the Guardian into live events, in the form of discussions, demonstrations, interviews, speeches and debates.</p>
                 <a class="action home-slice__action" href="/join">Join today</a>
             </div>
         </div>
