--- a/frontend/assets/stylesheets/pages/_events-list.scss
+++ b/frontend/assets/stylesheets/pages/_events-list.scss
@@ -401,19 +401,15 @@ $filter-icon-size: 18px;
     bottom: rem($gs-gutter / 2);
     right: rem($gs-gutter / 2);
 
+    height: rem(44px);
+    background-position: right;
+    background-size: contain;
+    background-repeat: no-repeat;
+
     @include mq(tablet) {
         bottom: rem($gs-gutter);
         right: rem($gs-gutter);
-    }
-
-    .svg & {
-        height: rem(44px);
-        background-position: right;
-        background-size: contain;
-
-        @include mq(tablet) {
-            height: rem(87px);
-        }
+        height: rem(87px);
     }
 }
 
