Remove references to icon-sprite

--- a/frontend/app/views/fragments/event/ticketSales.scala.html
+++ b/frontend/app/views/fragments/event/ticketSales.scala.html
@@ -24,7 +24,7 @@
         <div class="event-content__tickets event-content--line-divider u-cf" itemprops="offers" itemscope itemtype="http://schema.org/AggregateOffer">
             <div class="event-content__sale-dates u-cf">
                 <div class="event-content__first">
-                    <i class="icon-sprite icon-sprite-book_tickets icon-sprite--small"></i>
+                    <i class="icon-sprite-book_tickets icon-sprite--small"></i>
                 </div>
                 <div class="event-content__second">
                     <div class="sale-dates__header">Ticket sales</div>
