--- a/frontend/app/views/fragments/header.scala.html
+++ b/frontend/app/views/fragments/header.scala.html
@@ -15,7 +15,7 @@
                             <a href="@Config.idWebAppSigninUrl("")" role="menuitem" class="no-underline icon-wrapper js-identity-icon control__user-account" title="Your account">
                                 <span class="control">
                                     <span class="control__icon">
-                                        <i class="icon-sprite icon-sprite-user-black"></i>
+                                        <i class="icon-sprite-user-black"></i>
                                     </span>
                                 </span>
                                 <span class="hidden-mobile">
@@ -27,7 +27,7 @@
                         </li>
                         <li class="menu-item menu-item--last is-hidden js-header-join-us-cta">
                             <a href="/join" role="menuitem" class="no-underline hidden-mobile control__join-us" title="Join us">
-                                <span class="control control--no-border"><i class="icon-sprite icon-sprite-g-black"></i></span>
+                                <span class="control control--no-border"><i class="icon-sprite-g-black"></i></span>
                                 <span class="control__info no-underline--override hidden-mobile">Join us</span>
                             </a>
                         </li>
@@ -46,8 +46,8 @@
                 <span itemscope itemtype="http://schema.org/Organization">
                     <a href="/" itemprop="url" class="icon-wrapper">
                         <span class="u-h" itemprop="name">@Config.siteTitle</span>
-                        <i class="icon-sprite icon-sprite-membership_beta_mobile mobile-only"></i>
-                        <i class="icon-sprite icon-sprite-logo-beta hidden-mobile"></i>
+                        <i class="icon-sprite-membership_beta_mobile mobile-only"></i>
+                        <i class="icon-sprite-logo-beta hidden-mobile"></i>
                     </a>
                 </span>
             </div>
