--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -30,7 +30,7 @@
                        data-filter-field="title"
                        placeholder="Filter by title"
                        autocomplete="off" />
-                <i class="events-list__filter__icon icon-sprite icon-sprite-search"></i>
+                <i class="events-list__filter__icon icon-sprite-search"></i>
             </label>
         </div>
     </div>
