--- a/frontend/app/views/fragments/event/itemSummary.scala.html
+++ b/frontend/app/views/fragments/event/itemSummary.scala.html
@@ -16,12 +16,12 @@
         </h2>
 
         <div class="event-item__detail">
-            <i class="icon-sprite icon-sprite-early_booking-grey event-item__icon"></i>
+            <i class="icon-sprite-early_booking-grey event-item__icon"></i>
             <time datetime="@event.start">@prettyDateWithTimeAndDayName(event.start)</time>
         </div>
 
         <div class="event-item__detail">
-            <i class="icon-sprite icon-sprite-location event-item__icon"></i>
+            <i class="icon-sprite-location event-item__icon"></i>
             @if(event.venue.name){
                 <span class="event-item__location-name">@event.venue.name </span>
             }
