--- a/frontend/app/views/fragments/footer.scala.html
+++ b/frontend/app/views/fragments/footer.scala.html
@@ -6,7 +6,7 @@
             <div class="brand-bar u-cf">
                 <a href="/" data-link-name="site logo" class="guardian-logo-footer hidden-mobile">
                     <span class="u-h">@Config.siteTitle</span>
-                    <i class="icon-sprite icon-sprite-membership_beta_mobile"></i>
+                    <i class="icon-sprite-membership_beta_mobile"></i>
                 </a>
                 <a class="brand-bar__item brand-bar__item--action" data-link-name="back to top" href="#top">
                     <span class="control">
